# veilcomm

./: Cargo.toml  LICENSE  README.md  rend-spec-v3.txt  tor-spec.txt
client/: Cargo.toml  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  main.rs  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
crypto/src/: aes_key.rs  keys.rs
directory/: Cargo.toml
directory/src/: directory_event.rs  lib.rs  main.rs  relay.rs  relay_descriptor.rs  relays.rs  user_descriptor.rs  user_descriptors.rs
directory/src/routers/: get_relays.rs  get_users.rs  mod.rs  publish_relay.rs  publish_user.rs
network/: Cargo.toml
network/src/: cell.rs  cell_command.rs  connection.rs  connection_event.rs  control_payload.rs  lib.rs  node.rs  onion_skin.rs  payload.rs  relay_command.rs  relay_payload.rs
src/: aes_key.rs  api.rs  cell.rs  cell_command.rs  command.rs  communication.rs  connection.rs  connection2.rs  directory.rs  event.rs  key.rs  keys.rs  lib.rs  logger.rs  main.rs  node.rs  payload.rs  peer.rs  relay.rs  user.rs  utils.rs
src/api/: api.rs  mod.rs
src/crypto/: aes.rs  generators.rs  keys.rs  mod.rs  onion_skin.rs
src/data/: event.rs  mod.rs  payload.rs  relay_cell.rs
src/kademlia/: distance.rs  key.rs  mod.rs  network.rs  node.rs  protocol.rs  routing.rs  utils.rs
src/payload_data/: create_data.rs  mod.rs
src/payloads/: create.rs  created.rs  extend.rs  extended.rs  mod.rs
src/state/: api.rs  mod.rs  relay.rs  user.rs
tor/: Cargo.toml
tor/src/: aes_key.rs  cell.rs  cell_command.rs  circ_ids.rs  circuit.rs  circuit_node.rs  circuits.rs  connections.rs  constants.rs  control_payload.rs  cookies.rs  hidden_user_descriptor.rs  introduction_points.rs  keys.rs  lib.rs  main.rs  peer.rs  (+14 more)
tor_v2/: Cargo.toml
veilcomm-ui/: package-lock.json  package.json  tailwind.config.js
(+196 files in other folders)
