[package]
name = "veilcomm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
sha2 = "0.10.6"
hex = "0.4.3"
crossbeam-channel = "0.5.6"
serde_json = "1.0.93"
serde-big-array = "0.5.0"
bincode = "1.3.3"
