[package]
name = "veilcomm2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde-big-array = "0.5.1"
actix-rt = "2.10.0"
actix-web = "4.8.0"
log = "0.4.21"
tracing = "0.1.40"
tokio = { version = "1.38.0", features = ["full"] }
openssl = "0.10.64"
futures = "0.3.30"
serde_json = "1.0.117"
anyhow = "1.0.86"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8.5"
hex = "0.4.3"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
actix-cors = "0.6.4"
lazy_static = "1.5.0"
chrono = "0.4.38"
env_logger = "0.11.5"
colored = "2.1.0"

[dependencies.simple_logger]
version = "*"
features = ["colors"]

[lib]
name = "veilcomm2"
path = "src/lib.rs"

[[bin]]
name = "veilcomm2"
path = "src/main.rs"
