[package]
name = "directory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum_macros = "0.24.3"
axum = "0.6.18"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde-big-array = "0.5.0"
bincode = "1.3.3"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.18", features = ["json"] }
hex = "0.4.3"
